# raft

./: .gitignore  README.md
raft_node/: raft_node.cpp
server/: CMakeLists.txt  run.sh
server/src/: app.py  main.cpp  main1.cpp  serialize.cpp  server.cpp  threadpool.cpp
simulation/: CMakeLists.txt  run.sh
simulation/config/: config.txt
simulation/result/: state.txt
simulation/src/: cluster.cpp  main.cpp  sim_connection.cpp  sim_server.cpp  utils.cpp
utils/: utils.cpp
